# apps/hash-graph/openapi/openapi.json
@@ -3097,7 +3097,8 @@
         "required": [
           "schema",
           "ownedById",
-          "relationships"
+          "relationships",
+          "provenance"
         ],
         "properties": {
           "ownedById": {
@@ -3135,7 +3136,8 @@
           "entityTypeIds",
           "properties",
           "draft",
-          "relationships"
+          "relationships",
+          "provenance"
         ],
         "properties": {
           "confidence": {
@@ -3198,7 +3200,8 @@
         "required": [
           "schema",
           "ownedById",
-          "relationships"
+          "relationships",
+          "provenance"
         ],
         "properties": {
           "icon": {
@@ -3246,7 +3249,8 @@
         "required": [
           "schema",
           "ownedById",
-          "relationships"
+          "relationships",
+          "provenance"
         ],
         "properties": {
           "ownedById": {
@@ -5768,7 +5772,8 @@
             "type": "object",
             "required": [
               "schema",
-              "relationships"
+              "relationships",
+              "provenance"
             ],
             "properties": {
               "provenance": {
@@ -5804,7 +5809,8 @@
             "type": "object",
             "required": [
               "schema",
-              "relationships"
+              "relationships",
+              "provenance"
             ],
             "properties": {
               "icon": {
@@ -5852,7 +5858,8 @@
             "type": "object",
             "required": [
               "schema",
-              "relationships"
+              "relationships",
+              "provenance"
             ],
             "properties": {
               "provenance": {
@@ -6586,7 +6593,8 @@
       "PatchEntityParams": {
         "type": "object",
         "required": [
-          "entityId"
+          "entityId",
+          "provenance"
         ],
         "properties": {
           "archived": {
@@ -7267,20 +7275,16 @@
       },
       "ProvidedEntityEditionProvenance": {
         "type": "object",
+        "required": [
+          "actorType",
+          "origin"
+        ],
         "properties": {
           "actorType": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/ActorType"
-              }
-            ]
+            "$ref": "#/components/schemas/ActorType"
           },
           "origin": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/OriginProvenance"
-              }
-            ]
+            "$ref": "#/components/schemas/OriginProvenance"
           },
           "sources": {
             "type": "array",
@@ -7293,20 +7297,16 @@
       },
       "ProvidedOntologyEditionProvenance": {
         "type": "object",
+        "required": [
+          "actorType",
+          "origin"
+        ],
         "properties": {
           "actorType": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/ActorType"
-              }
-            ]
+            "$ref": "#/components/schemas/ActorType"
           },
           "origin": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/OriginProvenance"
-              }
-            ]
+            "$ref": "#/components/schemas/OriginProvenance"
           },
           "sources": {
             "type": "array",
@@ -7577,7 +7577,8 @@
         "description": "The type of source material which was used to produce a value.",
         "enum": [
           "webpage",
-          "document"
+          "document",
+          "external-type"
         ]
       },
       "Subgraph": {
@@ -7699,7 +7700,8 @@
       "UnarchiveDataTypeParams": {
         "type": "object",
         "required": [
-          "dataTypeId"
+          "dataTypeId",
+          "provenance"
         ],
         "properties": {
           "dataTypeId": {
@@ -7714,7 +7716,8 @@
       "UnarchiveEntityTypeParams": {
         "type": "object",
         "required": [
-          "entityTypeId"
+          "entityTypeId",
+          "provenance"
         ],
         "properties": {
           "entityTypeId": {
@@ -7729,7 +7732,8 @@
       "UnarchivePropertyTypeParams": {
         "type": "object",
         "required": [
-          "propertyTypeId"
+          "propertyTypeId",
+          "provenance"
         ],
         "properties": {
           "propertyTypeId": {
@@ -7795,7 +7799,8 @@
         "required": [
           "schema",
           "typeToUpdate",
-          "relationships"
+          "relationships",
+          "provenance"
         ],
         "properties": {
           "provenance": {
@@ -7876,7 +7881,8 @@
         "required": [
           "schema",
           "typeToUpdate",
-          "relationships"
+          "relationships",
+          "provenance"
         ],
         "properties": {
           "icon": {
@@ -7938,7 +7944,8 @@
         "required": [
           "schema",
           "typeToUpdate",
-          "relationships"
+          "relationships",
+          "provenance"
         ],
         "properties": {
           "provenance": {
