# libs/@local/hash-graph-types/rust/src/knowledge/entity/provenance.rs
@@ -28,6 +28,7 @@ use crate::account::{CreatedById, EditionArchivedById, EditionCreatedById};
 pub enum SourceType {
     Webpage,
     Document,
+    ExternalType,
 }
 
 /// A location where the source material can be found.
@@ -287,18 +288,14 @@ impl ToSql for EntityEditionProvenance {
     }
 }
 
-#[derive(Debug, Default, Clone, PartialEq, Eq, Serialize, Deserialize)]
+#[derive(Debug, Clone, PartialEq, Eq, Serialize, Deserialize)]
 #[cfg_attr(feature = "utoipa", derive(utoipa::ToSchema))]
 #[serde(deny_unknown_fields, rename_all = "camelCase")]
 pub struct ProvidedEntityEditionProvenance {
+    pub actor_type: ActorType,
+    pub origin: OriginProvenance,
     #[serde(default, skip_serializing_if = "Vec::is_empty")]
     pub sources: Vec<SourceProvenance>,
-    #[cfg_attr(feature = "utoipa", schema(nullable = false))]
-    #[serde(default, skip_serializing_if = "Option::is_none")]
-    pub actor_type: Option<ActorType>,
-    #[cfg_attr(feature = "utoipa", schema(nullable = false))]
-    #[serde(default, skip_serializing_if = "Option::is_none")]
-    pub origin: Option<OriginProvenance>,
 }
 
 #[derive(Debug, Clone, PartialEq, Eq, Serialize, Deserialize)]
